Some cleanup.